--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
     <h1>Shopping List</h1>
+    <div class="shopping-list-error" style="color: red"></div>
     <form id="js-shopping-list-form">
       <label for="shopping-list-entry">Add an item</label>
       <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
